volexc/tests/ui/mapkey_float_f64.typescript.out
Error: invalid map key type: floats cannot be used as map keys
   ╭─[mapkey_float_f64.vol:6:12]
   │
 6 │     data: {f64:string}
   │            ─┬─  
   │             ╰─── floating-point type used here
───╯