volexc/tests/ui/mapkey_float_f64.vol
// rust:fail
// go:fail
// typescript:fail
// f64 is invalid as map key in all languages (not Eq+Hash in Rust)
struct Test {
    data: {f64:string}
}
